=========
Changelog
=========


1.1.0 (unreleased)
==================

* Removed ``INDEX_TITLE`` backwards compatibility shim


1.0.1 (2018-06-14)
==================

* Added support for configurable alias from language function
  with the new ``ALDRYN_SEARCH_ALIAS_FROM_LANGUAGE`` setting


1.0.0 (2018-04-05)
==================

* Added django CMS 3.5 to test matrix
* Dropped support for Django < 1.8
* Dropped suppport for django CMS < 3.2


0.5.0 (2018-03-06)
==================

* Added new ``ALDRYN_SEARCH_EXCLUDED_PLUGINS`` setting to prevent
  specific plugin types from being indexed


0.4.1 (2017-11-02)
==================

* Updated metadata for pypi


0.4.0 (2017-10-20)
==================

* Added CMS 3.5.x compatibility
* Dropped support for Django 1.7.x


0.3.0 (2016-10-20)
==================

* Added CMS 3.4.x compatibility
* Added Django 1.8.x compatibility


0.2.12 (2016-05-19)
==================

* Added CMS 3.3.x compatibility


0.2.11 (2016-02-03)
==================

* Added Django 1.9 compatibility
* Dropped support for django CMS 2.4
* Fixed Travis setup
* Fixed importlib deprecation warning
* Fixed bug where unpublishing cms page would not remove it from index
* Added support for explicit signal based indexing
* Fixed regression on plugin indexing
* Restored the old _strip_tags due to a regression


0.2.10 (2015-10-15)
==================

* Updated documentation
* Added Django 1.8 compatibility


0.2.9 (2015-08-05)
==================

* Tests
* Fixed issue with lxml parser error


0.2.8 (2015-07-06)
==================

* Fixed issues with strip_tags
* Fixed issue where the non-public version of a title was being indexed


0.2.7 (2015-04-16)
==================

* Fixed a issue with get_language return wrong language in indexing


0.2.6 (2015-01-27)
==================

* Fixed issue with search_fields not following relationships


0.2.5 (2015-01-27)
==================

* Fixed issue with javascript not being stripped correctly