@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 __version__ = '1.0.1'
 
 default_app_config = 'aldryn_search.apps.AldrynSearchConfig'
