@@ -1,8 +1,8 @@
 # -*- coding: utf-8 -*-
-'''
+"""
 Created on Nov 30, 2015
 @author: jakob
-'''
+"""
 from django.dispatch.dispatcher import receiver
 
 from cms.models.titlemodels import Title
