@@ -1,9 +1,9 @@
 # -*- coding: utf-8 -*-
-'''
+"""
 Created on Dec 1, 2015
 
 @author: jakob
-'''
+"""
 import copy
 
 from haystack.exceptions import NotHandled
