@@ -1,9 +1,9 @@
 # -*- coding: utf-8 -*-
-'''
+"""
 Created on Nov 30, 2015
 
 @author: jakob
-'''
+"""
 from django.dispatch.dispatcher import Signal
 
 
